--- a/Cesgranrio.CorretorDeProvas.Web/Content/tema/light-bootstrap-dashboard.css
+++ b/Cesgranrio.CorretorDeProvas.Web/Content/tema/light-bootstrap-dashboard.css
@@ -3052,7 +3052,7 @@ margin:0 auto}
         padding-left: 5px;
         padding-right: 5px;
     }
-
+    
     .navbar-nav > li > .dropdown-menu, .dropdown .dropdown-menu {
         -webkit-transform: scale(0);
         -moz-transform: scale(0);
@@ -3180,6 +3180,7 @@ margin:0 auto}
     .navbar .navbar-collapse.collapse.in,
     .navbar .navbar-collapse.collapsing {
         display: none !important;
+
     }
 
     .navbar-nav > li {
@@ -3788,6 +3789,26 @@ margin:0 auto}
         -ms-overflow-style: -ms-autohiding-scrollbar;
         -webkit-overflow-scrolling: touch;
     }
+
+    body > .navbar-collapse > ul {
+        background: #9368E9;
+        background: -moz-linear-gradient(top, #9368E9 0%, #943bea 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9368E9), color-stop(100%, #943bea));
+        background: -webkit-linear-gradient(top, #9368E9 0%, #943bea 100%);
+        background: -o-linear-gradient(top, #9368E9 0%, #943bea 100%);
+        background: -ms-linear-gradient(top, #9368E9 0%, #943bea 100%);
+        background: linear-gradient(to bottom, #9368E9 0%, #943bea 100%);
+        background-size: 150% 150%;
+        
+    }
+
+
+    .navbar-collapse .nav p {
+        font-size:19px
+    }
+        body > .navbar-collapse > ul i {
+        display:none}
+    
 }
 
 .purple {
