validating correction input

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/Corrigir.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/Corrigir.cshtml
@@ -37,6 +37,18 @@
                                     @Html.HiddenFor(model => model.QuestaoID)
                                     @Html.HiddenFor(model => model.Questao.QuestaoEnunciado)
                                     @Html.ValidationMessageFor(model => model.QuestaoID, "", new { @class = "text-danger" })
+
+                                    
+                                    <h5>Grade de correção</h5>
+                                    <ul>
+                                        <li>Domínio das regras: @Html.Raw(Model.Questao.QuestaoGradeDominioDasRegras)</li>
+                                        <li>Fidelidade ao tema: @Html.Raw(Model.Questao.QuestaoGradeFidelidadeAoTema)</li>
+                                        <li>Nivel de Linguagem: @Html.Raw(Model.Questao.QuestaoGradeNivelDeLinguagem)</li>
+                                        <li>Organizacao de ideias: @Html.Raw(Model.Questao.QuestaoGradeOrganizacaoIdeias)</li>
+                                        <li><hr /><strong>Total: @Html.Raw(Model.Questao.QuestaoGradeDominioDasRegras + Model.Questao.QuestaoGradeFidelidadeAoTema + Model.Questao.QuestaoGradeNivelDeLinguagem + Model.Questao.QuestaoGradeOrganizacaoIdeias) pontos</strong></li>
+                                    </ul>
+
+
                                 </div>
                             </div>
                         </div>
