added row version to question

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Editar.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Editar.cshtml
@@ -23,7 +23,7 @@
 
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.QuestaoID)
-
+                    @Html.HiddenFor(model => model.QuestaoControleVersao)
                     <div class="row">
                         <div class="col-md-12">
 
