--- a/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/Corrigir.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/Corrigir.cshtml
@@ -153,7 +153,7 @@
             <div class="card">
                 
                 <div class="content">
-                    @*<a href="data:image/jpg;base64,@(Convert.ToBase64String(Convert.FromBase64String(Model.RespostaImagem)))" alt="Imagem da resposta" data-lightbox="image-@i++" data-title="Mostrar resposta gerada pelo simulador"><img src="data:image/jpg;base64,@(Convert.ToBase64String(Convert.FromBase64String(Model.RespostaImagem)))" alt="" width="100%" /></a>*@
+                    <a href="data:image/jpg;base64,@(Convert.ToBase64String(Convert.FromBase64String(Model.RespostaImagem)))" alt="Imagem da resposta" data-lightbox="image-@i++" data-title="Mostrar resposta gerada pelo simulador"><img src="data:image/jpg;base64,@(Convert.ToBase64String(Convert.FromBase64String(Model.RespostaImagem)))" alt="" width="100%" /></a>
                     <br />
                     <p class="category text-center">Obs: esta imagem foi gerada num Simulador</p>
                 </div>
