--- a/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Editar.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Editar.cshtml
@@ -100,6 +100,16 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
+                                <label class = "control-label col-md-2"><strong>Total</strong></label>
+                                <div class="col-md-10">
+                                    <input id="total" type="text" disabled="disabled" value="0,00" class="form-control numero"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10 salvar">
                                     <input type="submit" value="Salvar" class="btn btn-primary btn-lg mb" />
                                     @Html.ActionLink("Remover", "Remover", new { @id = Model.QuestaoID}, new { @class = "sidekick text-danger" })
