Fixing question editing

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
                     <nav class="pull-left">
                         <ul>
                             <li>
-                                <a href="/Questao/Lista"><i class="glyphicon glyphicon-chevron-left"></i> Voltar à lista de questões</a>
+                                <a href="/Questao/Listar"><i class="glyphicon glyphicon-chevron-left"></i> Voltar à lista de questões</a>
 
 
                             </li>
