Fixed generation of answers

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/Corrigir.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/Corrigir.cshtml
@@ -100,7 +100,7 @@
 
                             <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10 salvar">
-                                    <input type="submit" value="Confirmar notas" class="btn btn-primary btn-lg mb" />
+                                    <input type="submit" value="Confirmar nota" class="btn btn-primary btn-lg mb" />
                                 </div>
                             </div>
 
