Download link for simulator

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/SimularRespostas.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/SimularRespostas.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "SimularRespostas";
+    ViewBag.Title = "Simular Respostas";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -15,7 +15,7 @@
                         Antes de executar este programa verifique junto ao suporte se você já possui instalado o <a href="https://www.microsoft.com/pt-br/download/details.aspx?id=49982">.NET Framework 4.6.1</a>.
                     </p>
                     <p>
-                        <input type="submit" value="Baixar simulador" class="btn btn-primary btn-lg mb" title="Baixar simulador para gerar respostas"/>
+                        <input type="button" value="Baixar simulador" class="btn btn-primary btn-lg mb" title="Baixar simulador para gerar respostas" onclick="top.location.href='/Content/Cesgranrio.CorretorDeProvas.Simulador.zip'"/>
 
                     </p>
                 </div>
